--- a/vjortua-tip/activity4/Act4Playbook.yaml
+++ b/vjortua-tip/activity4/Act4Playbook.yaml
@@ -15,6 +15,7 @@
 
   tasks:
     - name: Java Installation
+      become: yes
       yum: 
         name: java-1.8.0-openjdk
         state: present
