--- a/vjortua-tip/activity6/roles/ubuntuins/tasks/main.yml
+++ b/vjortua-tip/activity6/roles/ubuntuins/tasks/main.yml
@@ -31,7 +31,7 @@
 
 - name: Mariadb Installation
   apt:
-    name: mariadb-server-10.3
+    name: mariadb-server
     state: latest
     update_cache: yes
 # tasks file for roles/ubuntuins
