--- a/1811588/midterm-exam/roles/nagios1ins/tasks/main.yml
+++ b/1811588/midterm-exam/roles/nagios1ins/tasks/main.yml
@@ -1,2 +1,33 @@
 ---
+- name: Packages for Nagios Installation
+  apt:
+    name:
+      - apache2
+      - apache2-utils
+      - build-essential
+      - daemon
+      - libapache2-mod-php
+      - libgd-dev
+      - libperl-dev
+      - libssl-dev
+      - make
+      - openssl
+      - perl
+      - php
+      - php-gd
+      - unzip
+      - wget
+    state: latest
+    update_cache: yes
+
+- name: Nagcmd Group
+  group:
+    name: nagcmdgrp
+    state: present
+
+- name: Nagios User
+  user:
+    name: nagiosusr
+    group: nagcmd
+
 # tasks file for roles/nagios1ins
