--- a/1811588/midterm-exam/roles/nagios2ins/tasks/main.yml
+++ b/1811588/midterm-exam/roles/nagios2ins/tasks/main.yml
@@ -1,2 +1,57 @@
 ---
+- name: Nagios Download and Extraction
+  unarchive:
+    src: https://sourceforge.net/projects/nagios/files/nagios-4.x/nagios-4.4.6/nagios-4.4.6.tar.gz
+    dest: /tmp
+    copy: no
+
+- name: Nagios Configuration
+  command: ./configure --with-nagios-group=nagcmdgrp --with-httpd_conf=/etc/apache2/sites-enabled
+  args:
+    chdir: /tmp/nagios-4.4.6
+
+- name: Nagios Clean
+  make:
+    chdir: /tmp/nagios-4.4.6
+    target: clean
+
+- name: Nagios Install
+  make:
+    chdir: /tmp/nagios-4.4.6
+    target: install
+
+- name: Nagios Install Init
+  make:
+    chdir: /tmp/nagios-4.4.6
+    target: install-init
+
+- name: Nagios Install Config
+  make:
+    chdir: /tmp/nagios-4.4.6
+    target: install-config
+
+- name: Nagios Install Commandmode
+  make:
+    chdir: /tmp/nagios-4.4.6
+    target: install-commandmode
+
+- name: Nagios Install Webconf
+  make:
+    chdir: /tmp/nagios-4.4.6
+    target: install-webconf
+
+- name: Nagios User Acc
+  htpasswd:
+    path: /usr/local/nagios/etc/htpasswd.users
+    name: "{{ vyanneortua }}"
+    password: "{{ password }}"
+
+- name: Cgi command
+  command: a2enmod cgi
+
+- name: Apache2 Restart
+  service:
+    name: apache2
+    state: restarted
+    update_cache: yes
 # tasks file for roles/nagios2ins
