--- a/1811588/midterm-exam/roles/nagios3ins/tasks/main.yml
+++ b/1811588/midterm-exam/roles/nagios3ins/tasks/main.yml
@@ -1,2 +1,28 @@
 ---
+- name: Nagios Plugins Installations
+  unarchive:
+    scr: https://nagios-plugins.org/download/nagios-plugins-2.3.3.tar.gz
+    dest: /tmp
+    remote_src: yes
+
+- name: Nagios Plugins Configuration
+  command: ./configure --with-nagios-user=nagiosusr --with-nagios-group=nagcmdgrp
+  args:
+    chdir: /tmp/nagios-plugins-2.3.3
+
+- name: Make Conf
+  make:
+    chdir: /tmp/nagios-plugins-2.3.3
+
+- name: Make Install
+  make:
+    chdir: /tmp/nagios-plugins-2.3.3
+    target: install
+
+- name: Nagios Start
+  service:
+    name: nagios
+    enable: yes
+    state: started
+    update_cache: yes
 # tasks file for roles/nagios3ins
