--- a/1811588/midterm-exam/roles/elasticstack1ins/tasks/main.yml
+++ b/1811588/midterm-exam/roles/elasticstack1ins/tasks/main.yml
@@ -65,6 +65,12 @@
   lineinfile:
     dest: /etc/kibana/kibana.yml
     regexp: 'server.host'
+    line: 'server.host: localhost'
+
+- name: Server Port
+  lineinfile:
+    dest: /etc/kibana/kibana/yml
+    regexp: 'server.port:'
     line: 'server.port: 5601'
 
 - name: Hosts
