--- a/1811588/final-exam/roles/debnagios/tasks/main.yml
+++ b/1811588/final-exam/roles/debnagios/tasks/main.yml
@@ -30,7 +30,7 @@
     shell: /bin/bash
     comment: nagios user
     group: nagiosgrp
-    password '{{ naguser_pass }}'
+    password: '{{ naguser_pass }}'
 
 - name: Nagios group for External Command
   user:
