--- a/1811588/final-exam/roles/debftp/tasks/main.yml
+++ b/1811588/final-exam/roles/debftp/tasks/main.yml
@@ -19,14 +19,14 @@
 - name: SSH Deny User
   lineinfile:
     path: /etc/ssh/sshd_config
-    line: "DenyUsers '{{ user }}'"
+    line: "DenyUsers '{{ ftp_user }}'"
   register: successfully_denied
 
 - name: SSHD Service Restart
   service:
     name: sshd
     state: restarted
-  when: successfulle_denied.changed
+  when: successfully_denied.changed
 
 - name: Default Configuration File 
   copy:
