--- a/1811588/final-exam/roles/suseftp/tasks/main.yml
+++ b/1811588/final-exam/roles/suseftp/tasks/main.yml
@@ -18,7 +18,7 @@
 - name: SSH Access Deny
   lineinfile:
     path: /etc/ssh/sshd_config
-    line: "DenyUsers '{{ user }}'"
+    line: "DenyUsers '{{ ftp_user }}'"
   register: successfully_denied
 
 - name: SSHD Restart
