--- a/1811588/final-exam/roles/dcsmotd/tasks/main.yml
+++ b/1811588/final-exam/roles/dcsmotd/tasks/main.yml
@@ -2,5 +2,5 @@
 - name: MOTD
   lineinfile:
     path: /etc/motd
-    line: Ansible Managed by '{{ user }}'
+    line: Ansible Managed by '{{ username }}'
 # tasks file for roles/dcsmotd
