--- a/1811588/final-exam/roles/centnagios/tasks/main.yml
+++ b/1811588/final-exam/roles/centnagios/tasks/main.yml
@@ -9,9 +9,9 @@
       - httpd
       - perl
       - postfix
-      - unfix
+      - unzip
     state: latest
-    udpate_cache: yes
+    update_cache: yes
 
 - name: Httpd Start
   service:
