--- a/1811588/final-exam/config.yaml
+++ b/1811588/final-exam/config.yaml
@@ -1,4 +1,4 @@
-prelim-exams: https://github.com/vjortua-tip/sysad2-12021.git
+prelim: https://github.com/vjortua-tip/sysad2-12021.git
 username: vjortua-tip
 
 writeable_chroot: allow_writeable_chroot=YES
